--- a/public/app/admin/top-category/top-category-edit/top-category-edit.component.html
+++ b/public/app/admin/top-category/top-category-edit/top-category-edit.component.html
@@ -1,3 +1,39 @@
-<p>
-  top-category-edit works!
-</p>
+<div class="portlet light bordered">
+  <div class="portlet-title">
+    <div class="caption">
+      <i class="icon-bar-chart font-green-haze"></i>
+      <span class="caption-subject bold uppercase font-green-haze">Top Category</span>
+    </div>
+  </div>
+  <div class="portlet-body">
+    <div class="form-horizontal">
+      <form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+        <div class="form-group">
+          <label for="" class="col-md-3 control-label">Name</label>
+          <div class="col-md-9">
+            <input type="text"  class="form-control" formControlName="name">
+            <p *ngIf="name.hasError('required')" class="alert alert-danger">
+              Name is required.
+            </p>
+            <p *ngIf="name.hasError('minlength')" class="alert alert-danger">
+              Name must be at least 4 characters long.
+            </p>
+            <p *ngIf="name.hasError('maxlength')" class="alert alert-danger">
+              Name cannot be more than 24 characters long.
+            </p>
+            <p *ngIf="name.hasError('usernameTaken')" class="alert alert-danger">
+              This username is already taken <br>
+            </p>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="" class="col-md-3"></label>
+          <div class="col-md-9">
+            <input type="submit" value="Save" class="btn btn-primary" [disabled]="!editForm.valid">
+            <a [routerLink]="['../../']" class="btn btn-default">Back</a>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
