--- a/server/views/admin-style.jade
+++ b/server/views/admin-style.jade
@@ -18,3 +18,5 @@ link(href="Content/admin-assets/layouts/layout/css/layout.min.css" rel="styleshe
 link(href="Content/admin-assets/layouts/layout/css/themes/darkblue.min.css" rel="stylesheet" type="text/css" id="style_color" )
 link(href="Content/admin-assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" )
 
+//Custom CSS
+link(href="Content/admin-assets/global/css/style.css" rel="stylesheet" type="text/css" )
